--- a/src/content/docs/workers/get-started/index.mdx
+++ b/src/content/docs/workers/get-started/index.mdx
@@ -1,13 +1,12 @@
----
-pcx_content_type: navigation
-title: Get started
-sidebar:
-  order: 2
-
----
-
-import { DirectoryListing, Render } from "~/components"
-
-Build your first Worker.
-
-<DirectoryListing />
+export default {
+  async fetch(request, env, ctx) {
+    const imageURL = [https://upanh.tv/image/NcnG0E
+https://upanh.tv/image/NcnAaj
+https://upanh.tv/image/NcnLYZ
+https://upanh.tv/image/NcnJsA
+https://upanh.tv/image/NcnVWs
+https://upanh.tv/image/Ncn3nw
+https://upanh.tv/image/Ncnw7W];
+    return Response.redirect(imageURL[Math.floor(Math.random() * imageURL.length)]}, 302);
+  },
+};
